# naukri-job-agent-pro

./: .gitignore  Dockerfile  README.md  TESTING.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.example.yaml  profile.example.yaml
job_agent/: cli.py
job_agent/adapters/: clock.py  rate_limiter.py  scheduler.py
job_agent/adapters/naukri/: http.py  parser.py  source.py
job_agent/adapters/notify/: gmail_smtp.py  gmail_smtp_notifier.py  render.py
job_agent/adapters/notify/templates/: digest_email.html.j2  new_job_email.html.j2
job_agent/core/: app.py  config.py  logging.py  scoring.py  services.py  utils.py
job_agent/models/: config.py  job.py  profile.py  score.py
job_agent/store/: db.py  models.py  repo.py
scripts/: quick_test.py  test_all.sh  validate_config.py
tests/: test_scoring.py
